# FYP-Cognitive-Load-Detection

./: .gitignore  DEPLOY_AZURE_VM.md  GITHUB_CI_SUMMARY.md  QUICKSTART.md  README.md  REFACTOR_README.md  REPORT_EXPORTS.md  docker-compose.yml
Machine Learning/: .gitignore  .pre-commit-config.yaml  CI_SETUP.md  README.md  TRAINING_LOADINDEX.md  pyproject.toml  quick_start.sh  requirements.txt  test_server.py
Machine Learning/configs/: avcaffe_regression.yaml  config.yaml  default.yaml  pilot_study.yaml  regression.yaml
Machine Learning/data/processed/: stress_features.csv
Machine Learning/docs/: AVCAFFE_DATASET.md
Machine Learning/models/: calibration.json  physio_teacher_eval.json
Machine Learning/models/avcaffe_baseline/: cv_results.json  feature_spec.json
Machine Learning/models/avcaffe_classification/: cv_results.json  feature_spec.json
Machine Learning/models/baseline_comparison/: cv_results.json
Machine Learning/models/stress_ensemble/: metrics.json  (+1 more)
Machine Learning/notebooks/: sanity_checks.ipynb
Machine Learning/reports/: avcaffe_validation_20260120_165007.json
Machine Learning/scripts/: analyze_physio_stress_patterns.py  combine_and_label_avcaffe.py  combine_participant_features.py  compare_distillation.py  compare_models.py  create_stress_manifest.py  eval_video_physio_ablation.py  extract_all_physio_features.py  extract_video_features.py  extract_video_features_from_manifest.py  generate_physio_labels.py  generate_sample_data.py  generate_soft_labels.py  generate_stressid_manifest.py  generate_synthetic_data.py  process_clare_data.py  run_parallel_extraction.ps1  test_server_live.py  train_on_physio_labels.py  train_physio_teacher.py  train_self_report_regression.py  train_video_physio_regression.py  tune_threshold.py  validate_avcaffe_dataset.py  validate_webcam_features.py
Machine Learning/tests/: test_blinks.py  test_integration.py  test_pipeline_offline_window_params.py  test_server.py  test_windowing.py
(+179 files in other folders)
